# harbor

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  harbor.sqlite  justfile  rust-toolchain.toml  windows.md
.cargo/: config.toml
.github/workflows/: ci.yml  format.yml  release.yml  test-secrets.yml  test.yml
assets/: harbor_logo.rgba
harbor-client/: Cargo.toml  diesel.toml
harbor-client/migrations/2024-05-13-234832_create_config/: down.sql  up.sql
harbor-client/migrations/2025-08-26-213617_bolt12/: down.sql  up.sql
harbor-client/migrations/2025-08-26-224833_bolt12_payment/: down.sql  up.sql
harbor-client/src/: cashu_client.rs  core.rs  db.rs  fedimint_client.rs  http.rs  lib.rs  lightning_address.rs  metadata.rs
harbor-client/src/db_models/: cashu_mint.rs  fedimint.rs  lightning_payment.rs  lightning_receive.rs  mint_metadata.rs  mod.rs  onchain_payment.rs  onchain_receive.rs  profile.rs  schema.rs  transaction_item.rs
harbor-ui/: Cargo.toml
harbor-ui/assets/linux/: cash.harbor.harbor.appdata.xml  cash.harbor.harbor.desktop  cash.harbor.harbor.metainfo.xml  harbor.desktop
harbor-ui/assets/macos/Harbor.app/Contents/: Info.plist
harbor-ui/assets/macos/Harbor.app/Contents/Resources/: harbor.icns
harbor-ui/assets/windows/: License.rtf  harbor.wxs
harbor-ui/src/: bridge.rs  conf.rs  config.rs  keyring.rs  lock.rs  main.rs
harbor-ui/src/components/: absolute_overlay.rs  balance_display.rs  button.rs  caption_text.rs  checkbox.rs  colors.rs  confirm_modal.rs  debug_stuff.rs  easing.rs  federation_item.rs  header.rs  icon.rs  indicator.rs  input.rs  layout.rs  mini_copy.rs  mod.rs  operation_status.rs  rules.rs  screen_header.rs  sidebar.rs  spinner.rs  styles.rs  toast.rs  transaction_details.rs  transaction_item.rs  util.rs
harbor-ui/src/routes/: donate.rs  history.rs  home.rs  mints.rs  mod.rs  receive.rs  restore.rs  send.rs  settings.rs  transfer.rs  unlock.rs  welcome.rs
migrations/2024-05-13-234832_create_config/: down.sql  up.sql
scripts/: README-linux-packaging.md  build-linux.sh  build-macos.sh  build-windows.ps1  fix-dylib-paths.sh  generate-linux-icons.sh  package-linux.sh  package-macos.sh  package-windows.ps1  sign-macos.sh  sign-windows.ps1  test-secrets.sh
src/: bridge.rs  conf.rs  core.rs  db.rs  fedimint_client.rs  main.rs
src/components/: button.rs  caption_text.rs  easing.rs  federation_item.rs  header.rs  icon.rs  input.rs  layout.rs  mini_copy.rs  mod.rs  screen_header.rs  sidebar.rs  spinner.rs  styles.rs  toast.rs  transaction_item.rs  util.rs
src/db_models/: fedimint.rs  lightning_payment.rs  lightning_receive.rs  mod.rs  onchain_payment.rs  onchain_receive.rs  profile.rs  schema.rs
src/routes/: history.rs  home.rs  mints.rs  mod.rs  receive.rs  send.rs  settings.rs  transfer.rs  unlock.rs  welcome.rs
