[workspace]
resolver = "2"

members = [
    "harbor-client",
    "harbor-ui",
]

[workspace.dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
log = "0.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.12", features = ["v4"] }
