[workspace]
resolver = "2"

members = [
    "harbor-client",
    "harbor-ui",
]

[workspace.dependencies]
chrono = "0.4.38"
lnurl-rs = { version = "0.9.0", default-features = false }
log = "0.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.12", features = ["v4"] }

[patch.crates-io]
fedimint-arti-client = { git = 'https://github.com/benthecarman/arti.git', rev = "e0f1f7a9a44ae0543c0b6716f0f4201142fd6133" }
fedimint-tor-dirmgr = { git = 'https://github.com/benthecarman/arti.git', rev = "e0f1f7a9a44ae0543c0b6716f0f4201142fd6133" }
tor-rtcompat = { git = 'https://github.com/benthecarman/arti.git', rev = "e0f1f7a9a44ae0543c0b6716f0f4201142fd6133" }
