[package]
name = "harbor-client"
version = "0.1.0"
edition = "2021"

[features]
default = []
vendored = ["rusqlite/bundled-sqlcipher-vendored-openssl"]

[dependencies]
anyhow = "1.0.89"
log = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.138"
chrono = "0.4.38"
rusqlite = { version = "0.28.0", features = ["sqlcipher"] }
diesel = { version = "2.1.6", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
futures = "0.3.31"
uuid = { version = "1.8", features = ["v4"] }
async-trait = "0.1.77"
bincode = "1.3.3"
hex = "0.4.3"
home = "0.5.9"
once_cell = "1.20.2"

bitcoin = { version = "0.32.4", features = ["base64"] }
bip39 = "2.0.0"

fedimint-api-client = "0.5.0"
fedimint-client = "0.5.0"
fedimint-core = "0.5.0"
fedimint-wallet-client = "0.5.0"
fedimint-mint-client = "0.5.0"
fedimint-ln-client = "0.5.0"
fedimint-bip39 = "0.5.0"
fedimint-ln-common = "0.5.0"
# update this when updating fedimint if we need too
arti-client = { version = "0.20.0", default-features = false, package = "fedimint-arti-client" }
# keep in sync with fedimint's version also
lnurl-rs = { version = "0.8.0", default-features = false }

http-body-util = "0.1.0"
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
tokio-native-tls = "0.3.1"

reqwest = { version = "0.12.12", features = ["json"] }

[dev-dependencies]
tempdir = "0.3.7"
