[package]
name = "harbor-client"
version = "1.0.0-beta.rc1"
edition = "2024"

[features]
default = []
vendored = ["rusqlite/bundled-sqlcipher-vendored-openssl"]

[dependencies]
anyhow = "1.0.89"
log = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.138"
chrono = "0.4.38"
rusqlite = { version = "0.28.0", features = ["sqlcipher"] }
diesel = { version = "2.1.6", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
futures = "0.3.31"
uuid = { version = "1.8", features = ["v4"] }
async-trait = "0.1.77"
bincode = "1.3.3"
hex = "0.4.3"
home = "0.5.9"
once_cell = "1.20.2"
httparse = "1.8.0"
url = "2.5.0"

bitcoin = { version = "0.32.4", features = ["base64"] }
bip39 = "2.0.0"

fedimint-api-client = { version = "0.6.1", features = ["tor"] }
fedimint-client = { version = "0.6.1", features = ["tor"] }
fedimint-core = "0.6.1"
fedimint-wallet-client = "0.6.1"
fedimint-mint-client = "0.6.1"
fedimint-ln-client = "0.6.1"
fedimint-bip39 = "0.6.1"
fedimint-ln-common = "0.6.1"

# BEGIN BLOCK OF KEEP IN SYNC WITH FEDIMINT'S VERSION
arti-client = { version = "0.20.0", default-features = false, features = ["tokio", "rustls"], package = "fedimint-arti-client" }
lnurl-rs = { version = "0.9.0", default-features = false }
hyper = { version = "1.6.0", default-features = false, features = ["client", "http1"] }
hyper-rustls = { version = "0.27.3", default-features = false }
hyper-util = { version = "0.1.3", default-features = false, features = ["client", "client-legacy", "tokio"] }
http-body-util = { version = "0.1.0", default-features = false }
tor-rtcompat = { version = "0.20.0", default-features = false, features = ["tokio", "rustls"] }
# END BLOCK OF KEEP IN SYNC WITH FEDIMINT'S VERSION

tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "tls12", "ring"] }
webpki-roots = "0.26.8"
rustls-pki-types = "1.11.0"

[dev-dependencies]
tempdir = "0.3.7"
env_logger = "0.11.2"
