[package]
name = "harbor-ui"
version = "1.0.0-beta.rc1"
edition = "2024"

[features]
default = []
vendored = ["harbor-client/vendored"]

[dependencies]
harbor-client = { version = "1.0.0-beta.rc1", path = "../harbor-client" }
fd-lock = "4.0.2"

log = "0.4"
simplelog = "0.12"
iced = { git = "https://github.com/iced-rs/iced", rev = "940a079", features = ["debug", "tokio", "svg", "qr_code", "advanced"] }
lyon_algorithms = "1.0"
tokio = { version = "1", features = ["full"] }
palette = "0.7"
chrono = "0.4.38"
uuid = { workspace = true }
cdk = { workspace = true }
cdk-redb = { workspace = true }

bitcoin = { version = "0.32.4", features = ["base64"] }
bip39 = "2.0.0"
fedimint-core = "0.6.1"
fedimint-ln-common = "0.6.1"
opener = { version = "0.7.2", features = ["reveal"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
keyring-lib = "1.0.2"