[package]
name = "harbor-ui"
version = "1.0.0-beta.rc2"
edition = "2024"
description = "Harbor Bitcoin Wallet"

[features]
default = []
vendored = ["harbor-client/vendored"]

[dependencies]
harbor-client = { version = "1.0.0-beta.rc1", path = "../harbor-client" }
fd-lock = "4.0.2"

log = { workspace = true }
simplelog = "0.12"
iced = { git = "https://github.com/iced-rs/iced", rev = "940a079", features = ["debug", "tokio", "svg", "qr_code", "advanced"] }
lyon_algorithms = "1.0"
tokio = { workspace = true }
palette = "0.7"
chrono = { workspace = true }
uuid = { workspace = true }

opener = { version = "0.7.2", features = ["reveal"] }
serde = { workspace = true }
serde_json = { workspace = true }
keyring-lib = "1.0.2"

[package.metadata.bundle]
name = "Harbor"
identifier = "cash.harbor"
icon = ["assets/windows/harbor.ico"]
resources = ["assets/windows/License.rtf"]
copyright = "Copyright (c) Harbor Cash. All rights reserved."
category = "Finance"
short_description = "Harbor Bitcoin Wallet"
long_description = """
Harbor is a Bitcoin wallet focused on privacy and ease of use.
"""

[package.metadata.bundle.windows]